genealogy-macros/tests/ui/invalid_atrribute.rs
use genealogy_macros::record;

#[record(invalid_attribute = true)]
struct Record {}

pub fn main() {}
